--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -53,7 +53,7 @@
                             </svg>
                             <div>
                                 <strong>Address</strong>
-                                <p>123 Auto District, Downtown<br>Your City, State 12345</p>
+                                <p>इंदापूर-अकलूज रोड, अकलूज ब्रिज शेजारी<br>इंदापूर, महाराष्ट्र,413106</p>
                             </div>
                         </div>
                         <div class="contact-detail">
@@ -64,7 +64,7 @@
                             </svg>
                             <div>
                                 <strong>Phone</strong>
-                                <p><a href="tel:+15551234567">(555) 123-4567</a></p>
+                                <p><a href="9860349257">9860349257</a></p>
                             </div>
                         </div>
                         <div class="contact-detail">
@@ -75,7 +75,7 @@
                             </svg>
                             <div>
                                 <strong>Email</strong>
-                                <p><a href="mailto:info@ceramiccoating.studio">info@ceramiccoating.studio</a></p>
+                                <p><a href="mailto:pkale29032003@gmail.com">pkale29032003@gmail.com</a></p>
                             </div>
                         </div>
                     </div>
