--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,11 +17,11 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="contact_name">Your Name *</label>
-                                <input type="text" id="contact_name" name="name" placeholder="John Doe" required>
+                                <input type="text" id="contact_name" name="name" placeholder="Enter Your Name" required>
                             </div>
                             <div class="form-group">
                                 <label for="contact_email">Email Address *</label>
-                                <input type="email" id="contact_email" name="email" placeholder="john@example.com"
+                                <input type="email" id="contact_email" name="email" placeholder="Enter Your Email"
                                     required>
                             </div>
                         </div>
