--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -51,10 +51,10 @@
                             <label for="vehicle_type">Vehicle Type</label>
                             <select id="vehicle_type" name="vehicle_type">
                                 <option value="">-- Choose vehicle type --</option>
-                                <option value="Bike">Bike</option>
-                                <option value="Hatchback">Hatchback</option>
-                                <option value="Sedan">Sedan</option>
-                                <option value="SUV">SUV</option>
+                                <option value="Low">Low</option>
+                                <option value="Base">Base</option>
+                                <option value="Medium">Medium</option>
+                                <option value="High">High</option>
                                 <option value="Luxury">Luxury</option>
                                 <option value="Standard">Standard</option>
                                 <option value="Premium">Premium</option>
