Some minor changes

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -64,7 +64,7 @@
                             </svg>
                             <div>
                                 <strong>Phone</strong>
-                                <p><a href="9860349257">9860349257</a></p>
+                                <p><a href="tel:9860349257">9860349257</a></p>
                             </div>
                         </div>
                         <div class="contact-detail">
